[tool.isort]
profile = "black"

[tool.poetry]
name = "python-base"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_base"}]

[tool.poetry.dependencies]
python = "^3.11"
interrogate = "^1.5.0"
coverage = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.3"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"
pylint = "^2.15.9"
flake8-bugbear = "^22.12.6"
bandit = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
